# s1-Test-Time-Scaling-Unofficial

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: default.yaml
scripts/: smoke_test.py
src/s1_test_time_scaling_unofficial/: __init__.py  model.py
